@@ -17,6 +17,11 @@ BETA PUBLIC RELEASE VERSION 0.3.3       XX-XX-XX
     * Fixed error in tools/mesh/dx2mol.c (Thanks to Fred Damberger)
     * Fixed floating point error which resulted in improper grid spacings for
       some cases.
+	* Identified a bug in Vacc_molAcc which generates spurious regions of high
+      internal dielectric for molecular surface-based dielectric definitions.
+	  These regions are very small and apparently affect energies by 1-2%.  We
+	  are working on a fix.  (Thanks to John Mongan and Jessica Swanson for
+	  finding this).
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.3.2       11-10-04
